# vscode-unicode-data

./: README.md  cache.ts  index.ts  package.json  tsconfig.json
.cache/: getExceptionsFromVsCodeLoc.json
data/: README.md  confusable-overrides.json
invisible-character-generator/: browser-index.html  browser-index.js  script.ts
rust-unicode-histogram/: Cargo.toml
rust-unicode-histogram/example/: test2.txt
rust-unicode-histogram/src/: main.rs  utils.rs
