[package]
name = "rust-unicode-histogram"
version = "0.1.0"
authors = ["Henning Dieterichs <hdieterichs@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
glob = "0.2.11"
hex = "0.3.2"
regex = "1.1.0"
shlex = "0.1.1"
rayon = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }